--- a/html e css Modulo 4/ex006/mq004/estilos/mediaquery.css
+++ b/html e css Modulo 4/ex006/mq004/estilos/mediaquery.css
@@ -1,55 +1,121 @@
 @charset "UTF-8";
 
-/*Todas as demais midias*/
+/*Versão mobile first*/
 
-*{
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 1.3em;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+/*typical device breakpoints
+Pequenas telas: ate 600px
+Celular: de 600px ate 768px
+Tablet: 768px ate 992px
+Desktop: 992px ate 1200px
+Grandes telas: acima de 1200px
+*/
+@media print { /*Impressão*/
+    *{
+        font-family: 'Courier New', Courier, monospace;
+    }
+
+    body{
+        background-image: url(../imagens/back-print.jpg); /*Desnecessario*/
+    }
+
+    main{
+        width: 90vw;
+        border: 2px solid black;
+    }
+
+    main::after{
+        content: 'Essa impressão foi feita atraves do site wwww.cursoemvideo.com';
+        text-decoration: overline;
+    }
+
+    main h1{
+        text-shadow: none;
+        color: black;
+    }
+
+    img#phone{
+        display: none; 
+     }
+     img#tablet{
+         display: none;
+     }
+     img#print{
+         display: block;
+     }
+     img#pc{
+         display: none;
+     }
+     img#tv{
+         display: none;
+     }
 }
 
-html{
-    height: 100vh;
-}
-body{
-    background: black url(../imagens/back-phone.jpg) no-repeat;
-    background-size: cover;
-    background-position: center center;
-}
-main{
-    background-color: rgba(255, 255, 255, 0.801);
-    width: 400px;
-    margin: auto;
-    margin-top: 20px;
-    border-radius: 10px;
-    padding: 10px;
-}
-h1{
-    text-align: center;
-    color: white;
-    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.822);
-    font-size: 2em;
+@media screen and (min-width:768px) and (max-width:992px) { /*Tablets*/
+    body{
+        background-image: url(../imagens/back-tablet.jpg);
+    }
+
+    img#phone{
+        display: none; 
+     }
+     img#tablet{
+         display: block;
+     }
+     img#print{
+         display: none;
+     }
+     img#pc{
+         display: none;
+     }
+     img#tv{
+         display: none;
+     }
 }
 
-img{
-    display: block;
-    margin: auto;
+@media screen and (min-width:992px) and (max-width:1200px) { /*Desktop*/
+    body{
+        background-image: url(../imagens/back-pc.jpg);
+    }
+
+    img#phone{
+        display: none; 
+     }
+     img#tablet{
+         display: none;
+     }
+     img#print{
+         display: none;
+     }
+     img#pc{
+         display: block;
+     }
+     img#tv{
+         display: none;
+     }
 }
 
-img#phone{
-   display: block; 
-}
-img#tablet{
-    display: none;
-}
-img#print{
-    display: none;
-}
-img#pc{
-    display: none;
-}
-img#tv{
-    display: none;
+@media screen and (min-width: 1200px) { /*Telas Grandes*/
+    body{
+        background-image: url(../imagens/back-tv.jpg);
+    }
+
+    main{
+        width: 700px;
+    }
+
+    img#phone{
+        display: none; 
+     }
+     img#tablet{
+         display: none;
+     }
+     img#print{
+         display: none;
+     }
+     img#pc{
+         display: none;
+     }
+     img#tv{
+         display: block;
+     }
 }
