--- a/html e css Modulo 4/ex006/tela de login/estilos/style.css
+++ b/html e css Modulo 4/ex006/tela de login/estilos/style.css
@@ -4,3 +4,48 @@
 Lilas: #5f2c82
 */
 
+*{
+    margin:0;
+    padding:0;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    box-sizing: border-box;
+}
+
+body,html{
+    background-color:#5f2c82 ;
+    height: 100vh;
+    width: 100vw;
+}
+
+main{
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+}
+
+section#login{
+    background-color: white;
+    width: 250px;
+    height: 500px;
+    border-radius: 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    overflow: hidden;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.445);
+}
+
+section#login > div#imagem{
+    background: #5f2c82 url(../imagens/pexels-dinnow-86001860-9444476.jpg) no-repeat;
+    background-position: center center;
+    background-size: cover;
+    height: 200px;
+    display: block;
+}
+
+section#login > div#formulario{
+    padding: 10px;
+    display: block;
+
+}
