--- a/html e css Modulo 4/ex006/tela de login/estilos/style.css
+++ b/html e css Modulo 4/ex006/tela de login/estilos/style.css
@@ -34,6 +34,8 @@ section#login{
     transform: translate(-50%, -50%);
     overflow: hidden;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.445);
+    transition: width 0.3s, height 0.3s;
+    transition-timing-function: ease;
 }
 
 section#login > div#imagem{
@@ -47,5 +49,4 @@ section#login > div#imagem{
 section#login > div#formulario{
     padding: 10px;
     display: block;
-
 }
