--- a/html e css Modulo 4/ex006/tela de login/estilos/style.css
+++ b/html e css Modulo 4/ex006/tela de login/estilos/style.css
@@ -19,7 +19,7 @@ body,html{
 
 main{
     position: relative;
-    height: 100vh;
+    height: 100vh; 
     width: 100vw;
 }
 
@@ -49,4 +49,13 @@ section#login > div#imagem{
 section#login > div#formulario{
     padding: 10px;
     display: block;
+}
+
+div#formulario > h1{
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+div#formulario > p{
+    font-size: 0.8em;
 }
