--- a/html e css Modulo 4/ex006/tela de login/estilos/mediaqueries.css
+++ b/html e css Modulo 4/ex006/tela de login/estilos/mediaqueries.css
@@ -15,6 +15,7 @@ Grandes telas: acima de 1200px
 
     section#login{
         width: 80vw;
+        height: 300px;
     }
 
     section#login > div#imagem{
@@ -36,6 +37,7 @@ Grandes telas: acima de 1200px
 
     section#login{
         width: 950px;
+        height: 400px;
     }
 
     section#login > div#imagem{
@@ -54,6 +56,7 @@ Grandes telas: acima de 1200px
     }
 
     div#formulario > p{
-        font-size: 1.2em;
+        font-size: 1.0em;
+        margin: 20px 0;
     }
 }
