--- a/html e css Modulo 4/ex006/tela de login/estilos/style.css
+++ b/html e css Modulo 4/ex006/tela de login/estilos/style.css
@@ -26,16 +26,16 @@ main{
 section#login{
     background-color: white;
     width: 250px;
-    height: 500px;
+    height: 515px;
     border-radius: 20px;
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
     overflow: hidden;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.445);
     transition: width 0.3s, height 0.3s;
     transition-timing-function: ease;
+    transform: translate(-50%, -50%);
 }
 
 section#login > div#imagem{
@@ -58,4 +58,78 @@ div#formulario > h1{
 
 div#formulario > p{
     font-size: 0.8em;
+}
+
+form > div.campo{
+    background-color:#5f2c82;
+    opacity: 0.7;
+    width: 100%;
+    display: block;
+    height: 40px;
+    border-radius: 8px;
+    margin: 5px 0px;
+    border: 2px solid #5f2c82 ;
+}
+
+div.campo > label{
+    display: none;
+}
+
+div.campo > span { 
+    color: white;
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+}
+
+div.campo > input{
+    background-color: #98f1ec;
+    font-size: 1em;
+    width:calc(100% - 45px) ;
+    height: 100%;
+    border: none;
+    border-radius: 8px;
+    padding: 4px;
+    transform: translateY(-12px);
+}
+
+div.campo > input:focus-within{
+    background-color: white;
+}
+
+form > input[type="submit"] {
+    display:block;
+    font-size:1em;
+    width: 100%;
+    height: 40px;
+    background-color:#49a09d ;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+form > input[type="submit"]:hover{
+    background-color: #275755;
+}
+
+form > a.botao{
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color: white;
+    border: 1px solid white;
+    border-radius: 5px;
+    cursor: pointer;
+    text-decoration: none;
+    color: #193a38;
+    padding-top: 7px;
+    margin-top: 5px;
+}
+
+form > a.botao:hover{
+    background-color: #98f1ec;
+    color: black;
 }
