--- a/html e css Modulo 5/flex013- menu flexbox/estilos/style.css
+++ b/html e css Modulo 5/flex013- menu flexbox/estilos/style.css
@@ -25,12 +25,13 @@ header{
 }
 
 header > h1{
-    border: 1px dotted black;
+    /*border: 1px dotted black;*/
     flex: 0 0 200px;
+    text-shadow: 1px 2px 0px rgba(0, 0, 0, 0.719) ;
 }
 
 header> nav{
-    border: 1px solid black;
+    /*border: 1px solid black;*/
     display: flex;
     flex-flow: row wrap;
     justify-content: end;
